test/users/brodtkorb/coercionQuestion.good
coercionQuestion.chpl:2: error: unresolved call '<=(1.1, 1)'
$CHPL_HOME/modules/standard/ChapelBase.chpl:140: note: candidates are: <=(a: int(32), b: int(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:141: note:                 <=(a: int(64), b: int(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:142: note:                 <=(a: uint(32), b: uint(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:143: note:                 <=(a: uint(64), b: uint(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:146: note:                 <=(a: string, b: string)
$CHPL_HOME/modules/standard/ChapelBase.chpl:172: note:                 <=(param a: int(32), param b: int(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:173: note:                 <=(param a: int(64), param b: int(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:174: note:                 <=(param a: uint(32), param b: uint(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:175: note:                 <=(param a: uint(64), param b: uint(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:176: note:                 <=(param a: enumerated, param b: enumerated)
$CHPL_HOME/modules/standard/ChapelBase.chpl:177: note:                 <=(param a: string, param b: string)
$CHPL_HOME/modules/standard/ChapelBase.chpl:1557: note:                 <=(a: uint(64), b: int(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:1558: note:                 <=(a: int(64), b: uint(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:1561: note:                 <=(param a: uint(64), param b: int(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:1564: note:                 <=(param a: int(64), param b: uint(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:1569: note:                 <=(a: uint(64), param b: int(64))
$CHPL_HOME/modules/standard/ChapelBase.chpl:1572: note:                 <=(param a: int(64), b: uint(64))
$CHPL_HOME/modules/standard/ChapelTuple.chpl:393: note:                 <=(a: _tuple, b: _tuple)
$CHPL_HOME/modules/standard/ChapelBase.chpl:144: note:                 <=(a: real(32), b: real(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:144: note:                 <=(a: real, b: real)
$CHPL_HOME/modules/standard/ChapelBase.chpl:145: note:                 <=(a: imag(32), b: imag(32))
$CHPL_HOME/modules/standard/ChapelBase.chpl:145: note:                 <=(a: imag, b: imag)
